2013-12-27  Charlie Zender  <zender@uci.edu>

	* ncdismember: Works with group names that contain whitespace

	* CDL-mode: print terminal group name comments in CDL-valid syntax to protect whitespace

	* Fix diagnostic INFO message for mk_rec_dmn/fix_rec_dmn in nco_cpy_var_dfn_trv(), nco_dmn_msa_tbl()

	* Autoconvert: fix when converting _FillValue, and restore defaults. MODIS works!

	* nco_att_cpy() autoconverts all netCDF4->netCDF3 types when appropriate in ncks

	* nco_msa_cpy_var_val_mlt_lmt_trv() use nco_var_cnf_typ() to autoconvert netCDF4->netCDF3

	* nco_msa_cpy_var_val_mlt_lmt_trv() use one code path for scalars and arrays

2013-12-25  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #78: CF extraction of in-scope variables

2013-12-25  Charlie Zender  <zender@uci.edu>

	* Replace harmless continue with more efficient break

2013-12-24  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #75, #76: Default datasets (no options)

	* Add ncks regression #77: flatten with parallel variables (-3 -G : -g)

2013-12-23  Charlie Zender  <zender@uci.edu>

	* Add autoconvert stubs to nco_xtr_dfn() and nco_cpy_var_val_mlt_lmt_trv()

	* Clean-up nco_cpy_var_dfn_trv() before implementing autoconvert feature

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn. grp mmr, ncra.c fixes, hdf4
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"
	cvs tag -c nco-4_4_0;cvs tag -c nco-4_4_0-1

	* Add HINT before exit() on NC_EBADTYPE

2013-12-22  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #74: -c option, extract all coordinate variables

2013-12-22  Charlie Zender  <zender@uci.edu>

	* ncks ~/nco/data/hdf.hdf now works!

	* Document new HDF4 capabilities

	* Eliminate need for --hdf4 switch if linked to netCDF 4.3.1-rc7+

	* Change from nco_hdf_cnv to nco_fmt_xtn enum/tokens

	* Add nco_inq_format_extended() stubs

	* Add hdf.cdl to generate HDF4 files for testing
