@@ -7,7 +7,7 @@
 
 @ignore
 
-$Header: /data/zender/nco_20150216/nco/doc/nco.texi,v 1.929 2013-12-28 05:19:58 zender Exp $
+$Header: /data/zender/nco_20150216/nco/doc/nco.texi,v 1.930 2013-12-28 06:37:40 zender Exp $
 
 Purpose: TeXInfo documentation for NCO suite
 
@@ -4326,7 +4326,7 @@ mkdir -p ${drc_out}
 cd ${drc_out}
 grp_lst=`ncks --cdl -m ${fl_in} | grep '// group' | awk '{$1=$2=$3="";sub(/^  */,"",$0);print}' | sort`
 echo "Dismembering file ${fl_in} into following files:"
-IFS=$'\n' # Change Inter-Field-Separator from <Space><Tab><Newline> to just <Newline>
+IFS=$'\n' # Change Internal-Field-Separator from <Space><Tab><Newline> to just <Newline>
 for grp_in in ${grp_lst} ; do
     grp_out=`echo ${grp_in} | sed 's/\///' | sed 's/\//./g'`
     if [ "${grp_out}" = '' ]; then grp_out='root' ; fi
